# artifact_detection

./: .gitignore  CITATION.cff  README.md  detect_artifacts.m
docs/: api.rst  conf.py  index.md
docs/api/: detect_artifacts.rst
hjorth/: detect_artifacts_hjorth.m  hjorth.m
rust/: .gitignore  Cargo.toml
rust/src/: bands.rs  filter_design.rs  lib.rs  signal.rs  slope_test.rs
rust/tests/: ground_truth.rs  matlab_parity.rs  slope_test_feature.rs  unit_quirks.rs
rust/tests/fixtures/: cheby1_hp_4_02_35hz.json  sim_clean_seed42.npy  sim_clean_seed42_art_mat.npy  sim_clean_seed42_art_mat_no_slope.npy  sim_clean_seed42_events.json  sim_dense_seed43.npy  sim_dense_seed43_art_mat.npy  sim_dense_seed43_art_mat_no_slope.npy  sim_dense_seed43_events.json  sim_dense_seed43_truth.npy  sim_flat_seed42.npy  sim_flat_seed42_art_mat.npy  sim_flat_seed42_art_mat_no_slope.npy  sim_flat_seed42_events.json  sim_flat_seed42_truth.npy  sim_full_seed42.npy  sim_full_seed42_art_mat.npy  sim_full_seed42_art_mat_no_slope.npy  sim_full_seed42_events.json  sim_full_seed42_truth.npy  sim_motion_seed42.npy  sim_motion_seed42_art_mat.npy  sim_motion_seed42_art_mat_no_slope.npy  sim_motion_seed42_events.json  sim_motion_seed42_truth.npy
